WIP: Working towards type inference

--- a/samples/Sample/input.lang
+++ b/samples/Sample/input.lang
@@ -15,7 +15,7 @@ module Sx.Test
 
 		public constructor(value : int)
 		{
-			Prop = GenericFunction<int>(10, false);
+			Prop = GenericFunction<int>(10);
 		}
 	}
 
